add: add font files for main icon

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image gallery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/all.min.css">
+    <link rel="stylesheet" href="./styles/css2.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div id="header">
+                <h2><i class="fas fa-camera" style="color: orange;"></i> Unsplash API</h2>
+                <div id="search_box">
+                    <input id="input" type="text" placeholder="Search..."><i id="search" class="fas fa-search"></i>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
