--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
             </div>
         </div>
     </header>
+    <main>
+
+    </main>
 </body>
+    <script src="./index.js"></script>
 </html>
