--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         </div>
     </header>
     <main>
-
+        <section>
+            <div class="container">
+              <div id="grid">
+                  
+              </div>
+            </div>
+        </section>
     </main>
 </body>
     <script src="./index.js"></script>
