--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="header">
                 <h2><i class="fas fa-camera" style="color: orange;"></i> Unsplash API</h2>
                 <div id="search_box">
-                    <input id="input" type="text" placeholder="Search..."><i id="search" class="fas fa-search"></i>
+                    <input id="input" type="text" placeholder="Search..." onkeydown="search(this)"><i id="search" class="fas fa-search"></i>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
         <section>
             <div class="container">
               <div id="grid">
-                  
+
               </div>
             </div>
         </section>
