--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image gallery</title>
+    <link rel="icon" type="image/png" sizes="64x64" href="assets/favicon64.png">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/all.min.css">
     <link rel="stylesheet" href="./styles/css2.css">
