--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="header">
                 <h2><i class="fas fa-camera" style="color: orange;"></i> Unsplash API</h2>
                 <div id="search_box">
-                    <input id="input" type="text" placeholder="Search..." onkeydown="search(this)"><i id="search" class="fas fa-search"></i>
+                    <input id="input" type="text" placeholder="Search..." onkeydown="search(this)" autofocus><i id="search" class="fas fa-search"></i><i id="cancel" class="fas fa-trash"></i>
                 </div>
             </div>
         </div>
@@ -29,6 +29,22 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="footer">
+
+            <div class="footer-link">
+                <a href="https://rs.school/js-stage0/" class="footer-link-item"></a>
+            </div>
+            <div class="footer-year">
+                <span class="footer-data-element">©</span>
+                <span class="footer-data-element">2022</span>
+            </div>
+            <div class="footer-data">
+                <a href="https://github.com/Naysa3r" class="footer-data-element footer-gh">GitHub</a>
+            </div>
+
+        </section>
+    </footer>
 </body>
     <script src="./index.js"></script>
 </html>
